+ Project saving fixed + Fixed object deletion from database on ID mismatch at naming vs insert time + Fixed run platform select